# aiidalab-flexpart

./: .gitignore  .pre-commit-config.yaml  README.md  info.ipynb  inversion_query.ipynb  main.ipynb  ncdump.ipynb  params_inversion.yaml  plot.ipynb  query.ipynb  sens_query.ipynb  settings.py  setup.cfg  start.md
config/: command.yaml  input_phy.yaml  location_groups.yaml  locations.yaml  meteo_inputs.yaml  models.yaml  outgrid.yaml  release.yaml  stash_files.yaml
saved/: saved.yaml
static/: style.css
utils/: default_codes.yaml  make_query.py  utils.py
widgets/: add_location.py  add_outgrid.py  basic.py  code_setup.py  command.py  filter.py  import_nc.py  input_phy.py  inversion_params.py  locations.py  misc.py  outgrid.py  outgrid_nest.py  presettings.py  query.py  releases.py  sens_query.py  stack.py
