[aiidalab]
title = Regional Inverse Modelling

[metadata]
name = regional-inverse-modelling-app
version = 2024.1001a3
author = J. Doe, G. Verdi
description = App for FLEXPART simulations
url = https://github.com/C2SM/aiidalab-flexpart

project_urls =
    Logo = https://raw.githubusercontent.com/C2SM/aiidalab-flexpart/main/img/logo.png
    Documentation = https://github.com/C2SM/aiidalab-flexpart/#readme
    Bug Tracker = https://github.com/C2SM/aiidalab-flexpart/issues

[options]
packages = find:
install_requires =
    aiida-core~=2.2
    aiida-flexpart~=0.1.0
    aiidalab-widgets-base~=2.1
    aiida-shell
python_requires = >=3.8

